--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -177,8 +177,13 @@
 		display: flex;
 
 		li {
+			cursor: pointer;
 			width: 50%;
 			text-align: center;
+
+			a {
+				text-decoration: none;
+			}
 		}
 	}
 
