Fix mobile tab in header layout 7, add option hide search box and login/register link

--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -122,6 +122,10 @@
 		}
 	}
 
+	.hide {
+		display: none;
+	}
+
 	.primary-navigation {
 		&:not(.elementor-inner) {
 			a {
@@ -175,6 +179,10 @@
 		padding: 0;
 		margin: 0;
 		display: flex;
+
+		@media ( min-width: $screen-md ) {
+			display: none;
+		}
 
 		li {
 			cursor: pointer;
