Add more options to customize, fix some issue

--- a/assets/css/sass/base/layout/sidebar-menu.scss
+++ b/assets/css/sass/base/layout/sidebar-menu.scss
@@ -188,9 +188,11 @@
 			cursor: pointer;
 			width: 50%;
 			text-align: center;
+			line-height: 1;
 
 			a {
 				text-decoration: none;
+				display: inline-block;
 			}
 		}
 	}
