Fixed issue in Product List Widget

--- a/assets/css/sass/base/layout/widgets.scss
+++ b/assets/css/sass/base/layout/widgets.scss
@@ -493,6 +493,12 @@
 		&:not(.slick-initialized) {
 			display: none;
 		}
+		.slick-list {
+			overflow: hidden;
+		}
+		.slick-track {
+			display: flex;
+		}
 	}
 }
 
