--- a/assets/css/rtl/layout/general.scss
+++ b/assets/css/rtl/layout/general.scss
@@ -53,6 +53,26 @@
 			}
 		}
 	}
+	#woostify-login-form-popup {
+		.woostify-login-form-popup-content {
+			.woocommerce-form {
+				&.woocommerce-form-login {
+
+					.woocommerce-form-login__rememberme {
+						text-align: right;
+					}
+					.lost_password {
+						text-align: right;
+					}
+				}
+				&.woocommerce-form-register {
+					.form-row {
+						float: revert;
+					}
+				}
+			}
+		}
+	}
 }
 
 .sidebar-menu-open {
