update support style RTL

--- a/assets/css/rtl/layout/header.scss
+++ b/assets/css/rtl/layout/header.scss
@@ -112,4 +112,10 @@
 			}
 		}
 	}
+	.wrap-toggle-sidebar-menu {
+		.toggle-sidebar-menu-btn {
+			transform: rotate(180deg);
+			-webkit-transform: rotate(180deg)
+		}
+	}
 }
