--- a/rtl.css
+++ b/rtl.css
@@ -162,6 +162,11 @@
   }
 }
 
+.rtl .wrap-toggle-sidebar-menu .toggle-sidebar-menu-btn {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+}
+
 .rtl #shop-cart-sidebar {
   left: 0;
   right: auto;
@@ -511,6 +516,11 @@
   border-left: 0;
 }
 
+.rtl .woocommerce-MyAccount-navigation .woocommerce-MyAccount-navigation-link .woostify-svg-icon {
+  margin-right: 0;
+  margin-left: 15px;
+}
+
 .rtl .products .product {
   float: right;
   margin-right: 0px;
@@ -798,6 +808,11 @@
   .rtl.has-gallery-layout-vertical .product-page-container .onsale {
     left: 10px;
   }
+}
+
+.rtl .woocommerce-tabs.layout-accordion .woostify-accordion-title .woostify-svg-icon {
+  right: auto;
+  left: 0;
 }
 
 .rtl .products {
