Fixed the label style of variant templates

--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -562,6 +562,9 @@
 	.label {
 		vertical-align: middle;
 		display: block;
+		background-color: transparent;
+		padding: 0;
+		border: none;
 	}
 
 	.value {
