--- a/style.css
+++ b/style.css
@@ -8002,6 +8002,9 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
 .variations .label {
   vertical-align: middle;
   display: block;
+  background-color: transparent;
+  padding: 0;
+  border: none;
 }
 
 .variations .value {
