--- a/rtl.css
+++ b/rtl.css
@@ -214,14 +214,19 @@
   right: 0;
 }
 
-.rtl .sidebar-menu .arrow-icon {
-  -webkit-transform: rotate(90deg);
-  transform: rotate(90deg);
+.rtl .sidebar-menu .site-navigation nav .menu-item a > .arrow-icon {
+  margin-right: 0;
+  margin-left: -20px;
+  border-left: none;
+  border-right: 1px solid #ececec;
 }
 
-.rtl .sidebar-menu .arrow-icon.active {
-  -webkit-transform: rotate(0);
-  transform: rotate(0);
+.rtl .sidebar-menu .site-navigation nav .sub-menu {
+  margin: 0;
+}
+
+.rtl .sidebar-menu .site-navigation nav .sub-menu .menu-item a > .arrow-icon {
+  margin-left: -30px;
 }
 
 .rtl .sidebar-menu .sidebar-menu-bottom ul {
