--- a/assets/css/rtl/woocommerce/general.scss
+++ b/assets/css/rtl/woocommerce/general.scss
@@ -134,12 +134,12 @@
 	}
 
 	.mini-cart-product-infor {
-		.mini-cart-product-qty[data-qty="plus"] {
-			border: 1px solid #ccc;
+		.mini-cart-product-qty[data-qty="minus"] {
+			border-left: 1px solid #ccc;
 			border-right: 0;
 		}
-		.mini-cart-product-qty[data-qty="minus"] {
-			border: 1px solid #ccc;
+		.mini-cart-product-qty[data-qty="plus"] {
+			border-right: 1px solid #ccc;
 			border-left: 0;
 		}
 	}
