--- a/rtl.css
+++ b/rtl.css
@@ -511,13 +511,13 @@
   margin-right: 0;
 }
 
-.rtl .mini-cart-product-infor .mini-cart-product-qty[data-qty="plus"] {
-  border: 1px solid #ccc;
+.rtl .mini-cart-product-infor .mini-cart-product-qty[data-qty="minus"] {
+  border-left: 1px solid #ccc;
   border-right: 0;
 }
 
-.rtl .mini-cart-product-infor .mini-cart-product-qty[data-qty="minus"] {
-  border: 1px solid #ccc;
+.rtl .mini-cart-product-infor .mini-cart-product-qty[data-qty="plus"] {
+  border-right: 1px solid #ccc;
   border-left: 0;
 }
 
