--- a/style.css
+++ b/style.css
@@ -4911,6 +4911,11 @@ footer#colophon {
   min-height: 80px;
 }
 
+.product_list_widget li.component_mini_cart_item {
+  border: none;
+  padding-left: 90px;
+}
+
 .product_list_widget img {
   max-width: 60px;
   max-height: 60px;
@@ -9068,6 +9073,16 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
     min-height: 95px;
     padding-left: 95px;
   }
+}
+
+@media (min-width: 598px) {
+  .cart-sidebar-content .mini_cart_item.component_mini_cart_item {
+    padding-left: 125px;
+  }
+}
+
+.cart-sidebar-content .mini_cart_item.component_mini_cart_item .mini-cart-product-infor .mini-cart-quantity {
+  display: none;
 }
 
 .cart-sidebar-content .mini_cart_item img {
