--- a/assets/css/sass/woocommerce/product-page.scss
+++ b/assets/css/sass/woocommerce/product-page.scss
@@ -1055,7 +1055,7 @@
 
 				.woostify-tab-scroll-content {
 					overflow-y: auto;
-					max-height: 250px;
+					max-height: 500px;
 					scrollbar-width: thin;
 					padding-right: 20px;
 
@@ -1077,6 +1077,16 @@
 				}
 			}
 		}
+
+		& + .related {
+			border-top: none;
+		}
+	}
+}
+
+.layout-accordion {
+	& + .related {
+		border-top: none;
 	}
 }
 
