remove list style type elementor

--- a/assets/css/sass/base/layout/custom.scss
+++ b/assets/css/sass/base/layout/custom.scss
@@ -71,3 +71,9 @@
 	min-height: 76px;
 }
 
+.elementor-widget .elementor-icon-list-items {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
