--- a/style.css
+++ b/style.css
@@ -5292,6 +5292,12 @@ footer#colophon {
   min-height: 76px;
 }
 
+.elementor-widget .elementor-icon-list-items {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .elementor-editor-active .elementor-widget-wp-widget-nav_menu .menu,
 .elementor-editor-active .elementor-widget-wp-widget-nav_menu .sub-menu,
 .elementor-editor-preview .elementor-widget-wp-widget-nav_menu .menu,
