--- a/assets/css/sass/woocommerce/cart-page.scss
+++ b/assets/css/sass/woocommerce/cart-page.scss
@@ -21,9 +21,15 @@
 				margin-bottom: 30px;
 			}
 
-			.cart_totals {
+			.cart-collaterals {
 				width: 48.5%;
 				float: right;
+			}
+		}
+
+		@media (max-width: $screen-md) {
+			.cross-sells {
+				margin-top: 50px;
 			}
 		}
 
@@ -65,6 +71,10 @@
 		.cart-collaterals {
 			border: 2px solid #efefef;
 			padding: 10px 20px 30px 20px;
+		}
+
+		.cross-sells {
+			clear: both;
 		}
 	}
 
@@ -539,7 +549,5 @@
 	}
 }
 
-.woocommerce .cross-sells {
-	clear: both;
-}
+
 
