--- a/style.css
+++ b/style.css
@@ -9222,9 +9222,15 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
     float: left;
     margin-bottom: 30px;
   }
-  .woocommerce-cart.cart-page-layout-1 .cart_totals {
+  .woocommerce-cart.cart-page-layout-1 .cart-collaterals {
     width: 48.5%;
     float: right;
+  }
+}
+
+@media (max-width: 992px) {
+  .woocommerce-cart.cart-page-layout-1 .cross-sells {
+    margin-top: 50px;
   }
 }
 
@@ -9259,6 +9265,10 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
 .woocommerce-cart.cart-page-layout-2 .cart-collaterals {
   border: 2px solid #efefef;
   padding: 10px 20px 30px 20px;
+}
+
+.woocommerce-cart.cart-page-layout-2 .cross-sells {
+  clear: both;
 }
 
 .woocommerce-cart .woocommerce-cart-form {
@@ -9663,10 +9673,6 @@ body:not(.yith-wcms-pro) .processing:not(.um-woo-status):after {
     margin-top: 30px;
     font-size: 12px;
   }
-}
-
-.woocommerce .cross-sells {
-  clear: both;
 }
 
 .woocommerce-terms-and-conditions {
