--- a/style.css
+++ b/style.css
@@ -12036,10 +12036,6 @@ ul.products li.product .product-loop-image-wrapper .tinvwl_add_to_wishlist_butto
   height: 30px;
 }
 
-.cart.wishlist_table .product-name {
-  padding: 0 20px !important;
-}
-
 @media (max-width: 768px) {
   .cart.wishlist_table .product-thumbnail {
     display: none;
@@ -12112,6 +12108,64 @@ ul.products li.product .product-loop-image-wrapper .tinvwl_add_to_wishlist_butto
   width: 30px;
   height: 30px;
   border: 1px solid #ddd;
+}
+
+.yith-wcwl-form .cart.wishlist_table tr th {
+  text-align: left;
+}
+
+.yith-wcwl-form .cart.wishlist_table tr td {
+  text-align: left;
+}
+
+.yith-wcwl-form .cart.wishlist_table .product-add-to-cart .add_to_cart_button span.woostify-svg-icon {
+  margin-right: 5px;
+}
+
+@media (max-width: 991px) {
+  .yith-wcwl-form .cart.wishlist_table {
+    padding-left: 0;
+  }
+  .yith-wcwl-form .cart.wishlist_table li {
+    margin-bottom: 20px;
+  }
+  .yith-wcwl-form .cart.wishlist_table li table tr {
+    flex-direction: row;
+    border-bottom: none;
+  }
+  .yith-wcwl-form .cart.wishlist_table li table td {
+    display: block;
+    border-bottom: none;
+    padding: 0 !important;
+  }
+  .yith-wcwl-form .cart.wishlist_table li table td.label {
+    width: 40% !important;
+  }
+  .yith-wcwl-form .cart.wishlist_table li table td.value {
+    text-align: right !important;
+    width: 60%;
+  }
+  .yith-wcwl-form .cart.wishlist_table .product-thumbnail {
+    position: relative;
+  }
+  .yith-wcwl-form .cart.wishlist_table .product-thumbnail img {
+    max-width: 100%;
+  }
+  .yith-wcwl-form .cart.wishlist_table .item-details .product-name h3 {
+    margin-top: 0;
+  }
+  .yith-wcwl-form .cart.wishlist_table .item-details .product-name a {
+    padding-right: 0;
+  }
+  .yith-wcwl-form .cart.wishlist_table .item-details .item-details-table {
+    margin-top: 0;
+  }
+  .yith-wcwl-form .cart.wishlist_table .additional-info {
+    margin-top: 0;
+  }
+  .yith-wcwl-form .cart.wishlist_table .product-remove {
+    position: relative;
+  }
 }
 
 .tinvwl-table-manage-list .product-action .button {
